--- a/pkg/config/dynamic/fixtures/sample.toml
+++ b/pkg/config/dynamic/fixtures/sample.toml
@@ -285,6 +285,7 @@
       [http.middlewares.Middleware15.forwardAuth]
         address = "foobar"
         trustForwardHeader = true
+        appendUriToAdrress = true
         authResponseHeaders = ["foobar", "foobar"]
         authResponseHeadersRegex = "foobar"
         authRequestHeaders = ["foobar", "foobar"]
